# MLP_Project

./: README.md  avazu-ctr-prediction.ipynb  demo.py  environment.yml  pyproject.toml
saves/: RF_regressor.pk
src/maincode/: custom_function.py
